fixed form spacing issue

--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -46,6 +46,7 @@
       color: $purple;
       border-radius: 8px;
       padding-top: 12px;
+      margin-bottom: 1em;
     }
 
     input::-webkit-input-placeholder {
